# mumble

./: .gitignore  README.md
data/: README.md  cpu.md  cpu_core_usage.py  cpuinfo.txt  denormalized.sql  full.sql  normalized.sql
data/csvlib/src/: lib.rs
data/promhist/: go.sum
data/tools/: Cargo.toml
data/tools/csvlib/: Cargo.toml
data/tools/csvlib/src/: lib.rs
data/tools/diff-denormalized/: Cargo.toml
data/tools/diff-denormalized/src/: main.rs
data/tools/diff-normalized/: Cargo.toml
data/tools/diff-normalized/src/: main.rs
data/tools/full-sample/: Cargo.toml
data/tools/full-sample/src/: main.rs
data/tools/partition-input/: Cargo.toml
data/tools/partition-input/src/: main.rs
data/tools/promhist/: go.mod  promhist.go
demo/how-normal/: package-lock.json  package.json  tsconfig.json  webpack.config.js
demo/how-normal/src/: cdf.ts  colormap.ts  ecdf.ts  gaussian.ts  index.html  index.ts  kolmogorov.ts  point.ts
doc/decisions/: README.md  open-telemetry.md  rust.md
rust/: Cargo.toml
rust/collector/: Cargo.toml
rust/collector/src/: clustering.rs  main.rs
rust/cpumon/src/: main.rs
rust/mumble/: Cargo.toml  build.rs
rust/mumble-prometheus/: Cargo.toml  NOTICE.txt  build.rs
rust/mumble-prometheus/src/: histogram.rs  lib.rs
rust/mumble/src/: ecdf.rs  lib.rs  mesh.rs  sse.rs
rust/mumble/ui/: package.json
rust/mumble/ui/src/: index.html
rust/src/cpumon/: Cargo.toml
rust/src/cpumon/src/: main.rs
rust/src/ecdfs2dot/: Cargo.toml
rust/src/ecdfs2dot/src/: main.rs
rust/src/mumble/: Cargo.toml
rust/src/mumble/src/: ecdf.rs  joint.rs  kstest.rs  lib.rs  mesh.rs  sse.rs  ui.rs
rust/src/mumble/ui/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
rust/src/mumble/ui/src/: index.html  index.ts
ts/ecdfs/: .eslintrc.json  package.json  tsconfig.json
ts/ecdfs/src/: cdf.ts  ecdf.test.ts  ecdf.ts  func.ts  gaussian.ts  index.ts  kolmogorov.ts  plot.ts
