[package]
name = "collector"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4" 
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
mumble = { path = "../mumble" }
mumble-prometheus = { path = "../mumble-prometheus" }
rmp-serde = "1.1.1"
sqlite = "0.30"
