[package]
name = "full-sample"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4" 
clap = { version = "4", features = ["derive"] }
csvlib = { path = "../csvlib" }
env_logger = "0.10"
log = "0.4"
mumble = { path = "../../../rust/mumble" }
rmp-serde = "1.1.1"
sqlite = "0.30"
