[package]
name = "cpumon"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {git = "https://github.com/hyperium/hyper", tag="v1.0.0-rc.2", features=["server", "http1"]}
mumble = { path = "../mumble" }
procfs = "0.14"
serde_json = "1.0"
tokio = {version="1", features=["macros", "net", "rt", "signal", "time"]}
