[package]
name = "mumble"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.26"
http = "0.2.8"
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.2"
lazy_static = "1"
num-traits = "0.2"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"

[build-dependencies]
npm_rs = "1.0"

[dev-dependencies]
itertools = "0.10"
more-asserts = "0.2"
rand = {version = "0.8", features=["small_rng"]}
statrs = "0.16"
